--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,12 @@ body {
 	font-family: 微软雅黑;
 }
 
-.b1 {
+.b1s {
 	border: 1px solid #ccc;
+}
+
+.b1d {
+	border: 1px dotted #aaa;
 }
 
 .bg {
@@ -24,6 +28,10 @@ body {
 
 .cp {
 	cursor: pointer;
+}
+
+.db {
+	display: block;
 }
 
 .dib {
@@ -58,3 +66,6 @@ body {
 	vertical-align: top;
 }
 
+.vs {
+	overflow-y: scroll;
+}
